--- a/template/list/list.wxss
+++ b/template/list/list.wxss
@@ -11,7 +11,7 @@
 }
 .list-bg {
 	font-size: 14px;
-	color: #fd1201;
+	color: #ff5145;
 	text-align: center;
 	position: absolute;
 	top: 57%;
@@ -24,7 +24,7 @@
 	margin-bottom: 30rpx;
 }
 .item {
-	background: #fd1201;
+	background: #ff5145;
 	padding: 20rpx 20rpx;
 	margin-bottom: 10rpx;
   display: flex;
