--- a/pages/todo_keyresult/todo_keyresult.wxss
+++ b/pages/todo_keyresult/todo_keyresult.wxss
@@ -4,7 +4,7 @@
 }
 .todo_keyresult-title {
 	font-size: 13px;
-  color: #999;
+  color: #71c9ce;
   background: #fff;
   padding-top: 20rpx;
   padding-bottom: 30rpx;
@@ -15,7 +15,7 @@
 .todo_keyresult-bg {
   width: 100%;
 	font-size: 14px;
-	color: #ff5145;
+	color: #71c9ce;
 	text-align: center;
 	position: absolute;
 	top: 50%;
@@ -32,18 +32,20 @@
 }
 .todo_keyresult-item-title {
   font-size: 15px;
-  color: #ff5145;
+  color: #71c9ce;
+	word-break: break-all;
 	margin-bottom: 10rpx;
 }
 .todo_keyresult-btn {
   font-size: 14px;
-	text-align: left;
-	border: 1px solid #ff5145;
+  color: #a6e3e9;
+	word-break: break-all;
+	border: 1px solid #71c9ce;
 	padding: 10rpx 10rpx;
 	line-height: 50rpx;
   margin-bottom: 30rpx;
 }
 .todo_keyresult-btn.active {
-  color: #fff;
-  background: #ff5145;
+	color: #e3fdfd;
+  background: #71c9ce;
 }
