--- a/template/list/list.wxss
+++ b/template/list/list.wxss
@@ -11,7 +11,7 @@
 }
 .list-bg {
 	font-size: 14px;
-	color: #ff5145;
+	color: #71c9ce;
 	text-align: center;
 	position: absolute;
 	top: 57%;
@@ -24,7 +24,7 @@
 	margin-bottom: 30rpx;
 }
 .item {
-	background: #ff5145;
+	background: #71c9ce;
 	padding: 20rpx 20rpx;
 	margin-bottom: 10rpx;
   display: flex;
@@ -39,19 +39,21 @@
 .item-title {
 	font-size: 14px;
 	color: #fff;
+	word-break: break-all;
 	margin-bottom: 10rpx;
+	margin-right: 130rpx;
 }
 .item-time {
 	font-size: 12px;
-	color: #d8d6d6;
+	color: #e3fdfd;
 }
 .item-icon {
 	width: 160rpx;
 	height: 160rpx;
 	border-radius: 50%;
-	border: 2px solid #d8d6d6;
+	border: 2px solid #cbf1f5;
 	font-size: 25px;
-	color: #d8d6d6;
+	color: #cbf1f5;
 	text-align: center;
 	line-height: 140rpx;
 	position: absolute;
